2006-01-14  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs.py: fix scrolled window
	* src/EditFamily.py: delete button
	* src/gramps.glade: clean up the window.
	
2006-01-13  Don Allingham  <don@gramps-project.org>
	* src/const.py.in: remove unused variables
	* src/gramps.glade: remove unused dialogs
	* src/DisplayTabs.py: Move event list  
	* src/EditFamily.py: add editing of people, add relationship type
	* src/EventEdit.py: move event list
	* src/FamilyView.py: remove common widgets
	* src/gramps.glade: EditFamily changes
	* src/GrampsWidgets.py: Common widgets

2006-01-13  Alex Roitman  <shura@gramps-project.org>
	* src/ViewManager.py: Proper label change for Undo/Redo.

2006-01-13 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
    * src/ObjectSelector/_IntEdit.py: added int only edit

2006-01-13  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/PedView.py: Use the same font as used in the gtk style

2006-01-13 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
    * src/ObjectSelector/_ObjectSelectorWindow.py: layout improvements
	* src/ObjectSelector/_PersonPreviewFrame.py: layout improvements
	* src/ObjectSelector/_PersonSearchCriteriaWidget.py: layout improvements

2006-01-12  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs.py: sub tabs for edit dialogs
	* src/EditFamily.py: family editor integration
	* src/gramps.glade: family editor changes

2006-01-12 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/ObjectSelector/_ObjectSelectorWindow.py: initial outline of
	ObjectSelector 
	* src/ObjectSelector/_PersonPreviewFrame.py: initial outline of
	ObjectSelector
	* src/ObjectSelector/_PersonSearchCriteriaWidget.py: initial
	outline of ObjectSelector
	
2006-01-12  Alex Roitman  <shura@gramps-project.org>
	* src/ViewManager.py: Connect undo handler to the menu item.
	* src/GrampsDb/_GrampsBSDDB.py: Place reference_map under
	transaction management.
	* src/GrampsDb/_GrampsDbBase.py: reference_map changes.
