@@ -1,0 +1,11 @@
+
+class ObjectTypes(object):
+    
+    PERSON     = 0
+    FAMILY     = 1
+    SOURCE     = 2
+    EVENT      = 3
+    MEDIA      = 4
+    PLACE      = 5
+    REPOSITORY = 6
+    REFERENCE  = 7
